2005-01-15  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/os2/gclient.c (ParseText): Fix super- and subscripts in enhanced
	mode of the pm terminal.

2005-06-14  Ethan Merritt  <merritt@u.washington.edu>

	New functions related to string variables:
	 sub = "ABCDEF"[beg:end]
	 sub = substring("ABCDEF",beg,end)
	 len = strlen("ABCDEF")

	* src/parse.c (parse_primary_expression): Check for a postfixed
	range specifier at the end of parsing an expression.

	* src/internal.c (f_range) src/internal.h: New internal function
	f_range() that applies a range specifier to a string in order to
	extract a substring.  Used both by substring() and by [*:*]

	* src/eval.c src/eval.h: Define an index code for the internal
	function f_range().  Make it accessible also as a function
	substring("string",beg,end). Also define a function strlen("string").

	* demo/stringvar.dem demo/all.dem docs/gnuplot.doc:
	Document and provide examples of substring syntax.
	Add string variable demo to all.dem

2005-06-13  Frank Maas / Ethan Merritt

	* docs/gnuplot.doc: Clarify histogram documentation to explain that
	histograms always use x1 axis coordinates, but other plot elements on
	the same plot may freely use either x1 or x2.

2005-06-13  KITA Toshihiro  <t-kita@cc.kumamoto-u.ac.jp>

	* docs/gnuplot.doc: Update `set xlabel` example to use the `offset`
	keyword.

2005-06-04  Juergen Wieferink  <wieferink@freenet.de>

	* src/parse.c eval.c eval.h internal.c command.c set.c:
	Code clean up: replace explicit test-and-free of string values with a
	call to gpfree_string().

	* src/datafile.c (df_open): Clean up parsing of data file name,
	using generic functions try_to_get_string() and gpfree_string().

2005-06-04  Ethan Merritt  <merritt@u.washington.edu>

	* src/eval.c src/eval.h src/show.c src/setshow.h: Move the routine
	disp_value() and its helper num_to_str() from eval.c to show.c. This
	reduces the need for mutual cross-referenced #includes, and anyway the